border collapse chrome bug workaround

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .table {
-	border-collapse: collapse;
+	border-spacing: 0;
 	table-layout: fixed;
 	width: 100%;
 	tr td {
@@ -14,6 +14,7 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 	width: auto;
+	border-right: 1px solid #000;
 }
 
 .data-row {
@@ -26,7 +27,7 @@
 @mixin cell {
 	min-width: 25px;
 	min-height: 25px;
-	border: 1px solid #000;
+	border-right: 1px solid #000;
 }
 
 .non-compliant {
